examples/invalid/17_existential_struct_missing_witness.lane
// invalid: struct literals must provide every existential type witness
module Examples.Invalid17

pub struct Hide {
  type T : Type
  val : T
}

pub let bad : Hide = Hide::{
  val: 1
}
